[package]
name = "unordered-n-tuple"
version = "0.1.0"
edition = "2018"
authors = ["Jarred Allen <jarredallen73@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "serde"]
std = []

[dependencies]
serde = { version = "1.0", optional = true }
