[package]
name = "unordered-n-tuple"
version = "0.0.1"
edition = "2018"
authors = ["Jarred Allen <jarredallen73@gmail.com>"]
description = "An unordered tuple of n homogenous elements"
repository = "https://github.com/JarredAllen/unordered-n-tuple-rust"
license = "MIT OR Apache-2.0"
categories = ["data-structures", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "serde"]
std = []

[dependencies]
serde = { version = "1.0", optional = true }
